fix: soft-delete

--- a/host/FR.KS.JAVA.SPRINGBOOT.P.L001/src/main/resources/messages.properties
+++ b/host/FR.KS.JAVA.SPRINGBOOT.P.L001/src/main/resources/messages.properties
@@ -1,3 +1,17 @@
+# Validation
 validation.email.required=Email is required
-validation.password.strong=Password is too weak
-error.user.not.found=User not found
+validation.email.invalid=Invalid email
+validation.password.required=Password is required
+validation.password.strong=Password is too weak (requires uppercase, lowercase, number, special char)
+
+# Resource Errors
+error.resource.not_found={0} not found with {1}: ''{2}''
+error.resource.already_exists={0} with {1} ''{2}'' already exists
+
+# Auth Errors
+error.auth.invalid_credentials=Email or Password incorrect
+error.auth.account_disabled=User account is disabled
+error.auth.access_denied=You do not have permission to access this resource
+
+# General
+error.internal_server=An unexpected error occurred. Please try again later.
