--- a/host/FR.KS.JAVA.SPRINGBOOT.P.L001/src/main/resources/messages_vi.properties
+++ b/host/FR.KS.JAVA.SPRINGBOOT.P.L001/src/main/resources/messages_vi.properties
@@ -1,3 +1,17 @@
+# Validation
 validation.email.required=Email là b?t bu?c
+validation.email.invalid=Email không h?p l?
+validation.password.required=M?t kh?u là b?t bu?c
 validation.password.strong=M?t kh?u quá y?u (c?n ch? hoa, th??ng, s?, ký t? ??c bi?t)
-error.user.not.found=Không tìm th?y ng??i dùng
+
+# Resource Errors
+error.resource.not_found=Không tìm th?y {0} v?i {1}: ''{2}''
+error.resource.already_exists={0} v?i {1} ''{2}'' ?ã t?n t?i
+
+# Auth Errors
+error.auth.invalid_credentials=Email ho?c m?t kh?u không chính xác
+error.auth.account_disabled=Tài kho?n ng??i dùng ?ã b? khóa
+error.auth.access_denied=B?n không có quy?n truy c?p tài nguyên này
+
+# General
+error.internal_server=?ã x?y ra l?i không mong mu?n. Vui lòng th? l?i sau.
